@@ -8,13 +8,16 @@
             <h5 class="card-header">Event in Progress</h5>
             <div class="card-body row home-race-info">
 
+                {{ if Config.LiveMap.IsEnabled }}
 
-                <div class="col-md-12">
+                    <div class="col-md-12">
 
-                    <div id="map">
-                        <img src="" class="img img-fluid img-bordered">
+                        <div id="map">
+                            <img src="" class="img img-fluid img-bordered">
+                        </div>
                     </div>
-                </div>
+
+                {{ end }}
 
                 <div class="col-md-8">
 
